--- a/testme.json5
+++ b/testme.json5
@@ -1,36 +1,59 @@
 {
-    // Enable or disable tests in this directory
-    enable: true, // Set to false to disable all tests in this directory
+    /*
+        Enable or disable tests in this directory
+        Set to false to disable all tests in this directory
+     */
+    enable: true,
 
-    // Minimum depth required to run tests in this directory (default: 0)
-    // Use tm --depth N to run tests with depth <= N
+    /*
+        Minimum depth required to run tests in this directory (default: 0)
+        Use tm --depth N to run tests with depth <= N
+     */
     depth: 0,
 
-    // Compiler configuration for different languages
+    /*
+         Compiler configuration for different languages
+     */
     compiler: {
         c: {
-            compiler: 'gcc',
-            flags: [
-                '-std=c99',
-                '-Wall',
-                '-Wextra',
-                '-Wno-unused-parameter',
-                '-Wno-strict-prototypes',
-                '-I.',
-                '-I${../build/*/inc}',
-                '-L${../build/*/bin}',
-                '-I/usr/local/include',
-                '-std=c99',
-                '-Wl,-rpath,@executable_path/${../../build/*/bin}',
-                '-Wl,-rpath,@loader_path/${../../build/*/bin}',
-                '-O0',
-                '-g',
-            ],
-            libraries: [
-                'm',
-                'pthread',
-                // '${../build/*/lib*.a}'
-            ],
+            compiler: 'default',  // Auto-detect best compiler. Use 'gcc', 'clang', or path to override
+
+            /*
+                GCC-specific flags (Unix/Linux/MinGW)
+                Default flags are automatically added: -std=c99 -Wall -Wextra -Wno-unused-parameter -Wno-strict-prototypes -O0 -g -I. -I/usr/local/include -L/usr/local/lib -I/opt/homebrew/include -L/opt/homebrew/lib
+             */
+            gcc: {
+                flags: [
+                    '-I..',
+                    '-I${../build/${PLATFORM}-${PROFILE}/inc',
+                    '-L${../build/${PLATFORM}-${PROFILE}/bin',
+                    '-Wl,-rpath,@executable_path/${CONFIGDIR}/../build/${PLATFORM}-${PROFILE}/bin',
+                ],
+                libraries: ['m', 'pthread'],
+            },
+
+            /*
+                Clang-specific flags (macOS/Unix)
+                Default flags are automatically added: -std=c99 -Wall -Wextra -Wno-unused-parameter -Wno-strict-prototypes -O0 -g -I. -I/usr/local/include -L/usr/local/lib -I/opt/homebrew/include -L/opt/homebrew/lib
+            */
+            clang: {
+                flags: [
+                    '-I..',
+                    '-I${../build/${PLATFORM}-${PROFILE}/inc',
+                    '-L${../build/${PLATFORM}-${PROFILE}/bin',
+                    '-Wl,-rpath,@executable_path/${CONFIGDIR}/../build/${PLATFORM}-${PROFILE}/bin',
+                ],
+                libraries: ['m', 'pthread'],
+            },
+
+            /*
+                MSVC-specific flags (Windows)
+                Default flags are automatically added: /std:c11 /W4 /Od /Zi /nologo
+            */
+            msvc: {
+                flags: ['/I.', '/I..', '/I${../build/${PLATFORM}-${PROFILE}/inc'],
+                libraries: [],
+            },
         },
         es: {
             require: 'testme',
@@ -53,16 +76,25 @@
 
     // File discovery patterns
     patterns: {
-        include: ['**/*.tst.sh', '**/*.tst.c', '**/*.tst.js', '**/*.tst.ts', '**/*.tst.es'],
+        include: [
+            '**/*.tst.sh',
+            '**/*.tst.ps1',
+            '**/*.tst.bat',
+            '**/*.tst.cmd',
+            '**/*.tst.c',
+            '**/*.tst.js',
+            '**/*.tst.ts',
+            '**/*.tst.es',
+        ],
         exclude: ['**/node_modules/**', '**/.testme/**', '**/.*/**'],
     },
 
     // Service management for test setup/teardown
     services: {
         skip: '', // Script to check if tests should be skipped (0=run, non-zero=skip)
-        prep: '',
-        setup: '',
-        cleanup: '',
+        prep: '', // Script to run once before all tests begin (waits for completion)
+        setup: '', // Script to start background service during test execution, runs before tests
+        cleanup: '', // Script to run after all tests complete for cleanup
         skipTimeout: 30000, // Skip script timeout in milliseconds
         prepTimeout: 30000, // Prep timeout in milliseconds
         setupTimeout: 30000, // Setup timeout in milliseconds
@@ -72,7 +104,7 @@
 
     // Environment variables to set for test execution
     env: {
-        BIN: '${../build/*/bin}',
+        BIN: '${../build/${PLATFORM}-${PROFILE}/bin}',
         HTTP: 'http://localhost:4100',
     },
 }
