DEV: update windows installs

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "bin/install.sh",
         "bin/install.ps1",
         "bin/install.mjs",
+        "bin/postinstall.mjs",
+        "bin/clean.mjs",
         "src/**/*.ts",
         "src/**/*.js",
         "src/**/*.d.ts",
@@ -46,13 +48,9 @@
         "build": "bun build ./testme.ts --compile --outfile dist/tm",
         "build:win": "bun build ./testme.ts --compile --outfile dist/tm.exe",
         "build:unix": "bun build ./testme.ts --compile --outfile dist/tm",
-        "clean": "node -e \"require('fs').rmSync('dist', {recursive: true, force: true}); require('fs').rmSync('.testme', {recursive: true, force: true})\"",
-        "clean:win": "if exist tm.exe del dist\\tm.exe && for /f %i in ('dir /b /a .*.bun-build 2^>nul') do del %i",
-        "clean:unix": "rm -rf dist .testme dist/tm",
-        "install:win": "powershell -ExecutionPolicy Bypass -File bin/install.ps1",
-        "install:unix": "sh bin/install.sh",
-        "postinstall:win": "powershell -ExecutionPolicy Bypass -File bin/install.ps1",
-        "postinstall:unix": "sh bin/install.sh",
+        "clean": "bun bin/clean.mjs",
+        "install": "bun bin/postinstall.mjs",
+        "postinstall": "bun bin/postinstall.mjs",
         "test": "tm test"
     },
     "engines": {
