--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@embedthis/testme",
     "owner": "embedthis",
-    "version": "0.8.1",
+    "version": "0.8.2",
     "description": "Multi-language test runner for shell, C, JavaScript, TypeScript, Python, and Go tests",
     "author": "Embedthis Software",
     "license": "GPL-2.0",
@@ -33,6 +33,7 @@
         "bin/install.mjs",
         "bin/postinstall.mjs",
         "bin/clean.mjs",
+        "bin/update-version.mjs",
         "src/**/*.ts",
         "src/**/*.js",
         "src/**/*.d.ts",
@@ -45,6 +46,7 @@
     ],
     "scripts": {
         "start": "bun run src/index.ts",
+        "prebuild": "node bin/update-version.mjs",
         "build": "bun build ./testme.ts --compile --outfile dist/tm",
         "build:win": "bun build ./testme.ts --compile --outfile dist/tm.exe",
         "build:unix": "bun build ./testme.ts --compile --outfile dist/tm",
@@ -85,5 +87,8 @@
     },
     "peerDependencies": {
         "typescript": "^5"
-    }
+    },
+    "trustedDependencies": [
+        "@embedthis/testme"
+    ]
 }
