--- a/src/modules/es/Makefile
+++ b/src/modules/es/Makefile
@@ -10,7 +10,5 @@ testme.mod: testme.es
 	ejsc testme.es
 
 install:
-	mkdir -p ~/.ejs
-	cp testme.mod ~/.ejs/testme.mod
-	sudo mkdir -p /usr/local/lib/testme
-	sudo cp testme.mod /usr/local/lib/testme
+	mkdir -p ~/.local/lib/testme
+	cp testme.mod ~/.local/lib/testme/testme.mod
