DEV: publish and link testme utils library

--- a/src/modules/js/Makefile
+++ b/src/modules/js/Makefile
@@ -7,7 +7,4 @@ build:
 	@true
 
 install:
-	sudo cp index.js /usr/local/include/testme.js
-	sudo mkdir -p /usr/local/lib/testme
-	sudo cp package.json /usr/local/lib/testme
-	sudo cp index.js /usr/local/lib/testme
+	bun link
