--- a/src/modules/es/Makefile
+++ b/src/modules/es/Makefile
@@ -7,7 +7,11 @@ build: testme.mod
 	@true
 
 testme.mod: testme.es
-	ejsc testme.es
+	if ! which ejsc > /dev/null 2>&1; then \
+		echo "ejsc not found, skipping testme.mod build"; \
+	else \
+		ejsc testme.es
+	fi
 
 install:
 	mkdir -p ~/.local/lib/testme
