DEV: update the testme.h C API

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "bun",
             "request": "launch",
             "name": "[Bun] Debug File",
-            "program": "${file}",
-            "args": ["hello"],
+            "program": "src/index.ts",
+            "args": ["--chdir", "/Users/mob/c/json/test/cmd", "-v", "-s", "basic"],
             "cwd": "${workspaceFolder}",
             "stopOnEntry": false,
             "watchMode": false,
