DEV: Add minify optimization and expand -s flag to all test types
Build Optimizations:
- Add --minify flag to all build commands, reducing binary size by ~0.47 MB
- Add Windows metadata flags for professional executable appearance
  (title, publisher, description)
- Update Makefile and package.json with optimization settings

Environment Display Enhancement:
- Expand -s/--show flag to display environment for all test types
  (previously only showed C compilation commands)
- Add displayEnvironmentInfo() helper in BaseTestHandler
- Display full test configuration as formatted JSON
- Show TestMe environment variables (TESTME_*)
- Show custom environment variables from testme.json5
- Disable TTY cursor control when -s is used to prevent output clearing

Documentation Updates:
- Update man page (doc/tm.1) with expanded -s flag description
- Update README.md with new flag functionality
- Update CLI help text in cli.ts

Technical Implementation:
- Modified reporter.ts to skip terminal control codes when showCommands enabled
- Updated all test handlers (JavaScript, TypeScript, Shell, Python, Go,
  Ejscript) to call displayEnvironmentInfo()
- Prevents line-clearing escape sequences from erasing environment output

All 38 tests pass successfully.

--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "scripts": {
         "start": "bun run src/index.ts",
         "prebuild": "node bin/update-version.mjs",
-        "build": "bun build ./testme.ts --compile --outfile dist/tm",
+        "build": "bun build ./testme.ts --compile --minify --outfile dist/tm",
         "postbuild": "cd src/modules/js && bun link && cd ../../../test && bun link testme",
-        "build:win": "bun build ./testme.ts --compile --outfile dist/tm.exe",
-        "build:unix": "bun build ./testme.ts --compile --outfile dist/tm",
+        "build:win": "bun build ./testme.ts --compile --minify --windows-title 'TestMe' --windows-publisher 'Embedthis Software' --windows-description 'Test runner for system projects' --outfile dist/tm.exe",
+        "build:unix": "bun build ./testme.ts --compile --minify --outfile dist/tm",
         "clean": "bun bin/clean.mjs",
         "install": "echo 'Installing...'",
         "postinstall": "bun bin/postinstall.mjs",
